# src/services/v1/landowner/controller/findAll.js
@@ -1,0 +1,46 @@
+const { Op } = require("sequelize");
+const { Landowner } = require("../../../../database");
+
+module.exports = async (req, _res, next) => {
+    // Get Values
+
+    try {
+        req.data = await Landowner.findAndCountAll({
+            where: {
+                [Op.or]: [
+                    {
+                        landownerName: {
+                            [Op.like]: `%${req.search}%`,
+                        },
+                    },
+                ],
+            },
+            attributes: {
+                exclude: ["createdById", "updatedById"],
+            },
+            include: [
+                {
+                    association: "createdBy",
+                    attributes: {
+                        exclude: ["password", "createdAt", "updatedAt", "email"],
+                    },
+                },
+                {
+                    association: "updatedBy",
+                    attributes: {
+                        exclude: ["password", "createdAt", "updatedAt", "email"],
+                    },
+                },
+            ],
+            offset: req.pagination.skip,
+            limit: req.pagination.limit,
+        });
+
+        next();
+
+        // On Error
+    } catch (error) {
+        // Send Error Response
+        next(error);
+    }
+};
