# src/swagger.json
@@ -1389,6 +1389,170 @@
         ],
         "deprecated": true
       }
+    },
+    "/api/v1/landowner/": {
+      "post": {
+        "tags": [
+          "Landowner"
+        ],
+        "description": "Create a new landowner",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "required": [
+                  "landownerName",
+                  "landownerEmail",
+                  "phoneNumber",
+                  "alterLandownerName",
+                  "locality",
+                  "fullAddress",
+                  "landSize",
+                  "width",
+                  "category",
+                  "attractiveFeature",
+                  "facing"
+                ],
+                "properties": {
+                  "landownerName": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "Farjana Moon"
+                  },
+                  "landownerEmail": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "farjanamoon@gmail.com"
+                  },
+                  "phoneNumber": {
+                    "type": "string",
+                    "minLength": 11,
+                    "example": "01234567891"
+                  },
+                  "alterLandownerName": {
+                    "type": "string",
+                    "miniLength": 10,
+                    "example": "Utsha Khan"
+                  },
+                  "locality": {
+                    "type": "string",
+                    "example": "Uttara"
+                  },
+                  "fullAddress": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "Hazibari, Uttara, Dhaka"
+                  },
+                  "landSize": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "100 sq/ft"
+                  },
+                  "width": {
+                    "type": "string",
+                    "minLength": 5,
+                    "example": "100 sq/ft"
+                  },
+                  "category": {
+                    "type": "string",
+                    "enum": [
+                      "freehold",
+                      "leasehold"
+                    ],
+                    "example": "freehold"
+                  },
+                  "attractiveFeature": {
+                    "type": "string",
+                    "enum": [
+                      "Lakeside",
+                      "Cornerplot",
+                      "Mainroad",
+                      "Parkview",
+                      "Others"
+                    ],
+                    "example": "Lakeside"
+                  },
+                  "facing": {
+                    "type": "string",
+                    "enum": [
+                      "East",
+                      "West",
+                      "North",
+                      "South"
+                    ],
+                    "example": "North"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Landowner"
+        ],
+        "description": "Get all landowner list",
+        "parameters": [
+          {
+            "name": "search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
